syntax = "proto3";

package mu.micro.book.srv.auth;

service Service {
    rpc MakeAccessToken (Request) returns (Response) {
    }
    rpc DelUserAccessToken (Request) returns (Response) {
    }

    rpc GetCachedAccessToken (Request) returns (Response) {
    }
}

message Error {
    int32 code = 1;
    string detail = 2;
}

message Request {
    int64 userId = 1;
    string userName = 2;
    string token = 3;
}

message Response {
    bool success = 1;
    Error error = 2;
    string token = 3;
}